Completed the SitePrice component, added classes.Fixed browser overflow issue
Added its scss file to the App component.

--- a/src/assets/sass/partials/app.scss
+++ b/src/assets/sass/partials/app.scss
@@ -6,9 +6,37 @@
   color: #2c3e50;
   /* Dimensioni */
   width: 100vw;
+  height: 100vh;
   margin: 0 auto;
   overflow-y: auto;
   overflow-x: hidden;
-  background-color: coral;
+}
 
+/* Regola generale */
+* {
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+}
+
+/* Stile della scrollbar - Per chrome */
+/* width of the entire scrollbar */
+#app::-webkit-scrollbar {
+    width: 12px;  
+}
+/* color of the tracking area */
+#app::-webkit-scrollbar-track {
+    background: #f7f7f7;      
+}
+
+#app::-webkit-scrollbar-thumb {
+    background-color: #1185b3;
+    border-radius: 15px;       /* roundness of the scroll thumb */
+    border: 0.5px solid #ffffff;  /* creates padding around scroll thumb */
+}
+
+/* Stile della scrollbar - Per Firefox */
+#app {
+    scrollbar-width: thin; 
+    scrollbar-color: #1185b3 #ffffff;
 }
